Fixes #771 item title should not obscure checkboxes on admin, Fixes #762 flash message on admin/items/browse should not overlap with search or pagination, Fixes #763 adds pagination to bottom of admin/items/browse.

--- a/admin/themes/default/css/components.css
+++ b/admin/themes/default/css/components.css
@@ -24,7 +24,7 @@ Grid: 846px wide, 12 columns at 54px each, 11 gutters at 18px each.
 .hide {width:0; height:0; position:absolute; left:-999em;}
 .error {background:#f1c8ba; color:#933; margin:1.5em 0; font-size:1.2em; padding:1.5em;}
 .field .error {clear:both;}
-.success {background-color: #B9D5B9; color:#245525; font-size:1.2em;padding:1.5em;}
+.success {background-color: #B9D5B9; color:#245525; font-size:1.2em;padding:1.5em;margin-bottom:1.5em;}
 .alert {background:#fff09e; font-size:1.2em; padding: 1.5em;margin-bottom:0.5em;}
 .tooltip {font-size:1.2em; line-height:1.5em;}
 
